home.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home 
  labels:
    app.kubernetes.io/name: home 
spec:
  ports:
    - port: 8123
      targetPort: 8123
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: home 

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home 
  labels:
    app.kubernetes.io/name: home 
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: home
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home 
    spec:
      hostNetwork: true
      containers:
        - name: home 
          image: homeassistant/home-assistant 
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8123
              protocol: TCP
          volumeMounts:
            - name: config 
              mountPath: /config/
      volumes:
        - name: config 
          hostPath:
           path: /ssd/k3s/home
           type: Directory
