ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home 
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - secretName: home-bender-sway-org-tls
      hosts:
        - home.bender.sway.org 
  rules:
  - host: home.bender.sway.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home 
            port:
              number: 8123
